package com.marslps.AISafeFMS.model.enums;

public enum AirportStatus {
    OPERATIONAL,
    CLOSED,
    UNDER_MAINTENANCE;
}
